# AOC

./: Cargo.toml
2023/1_trebuchet/part1/: trebuchet.cpp
2023/1_trebuchet/part2/: trebuchet.cpp
2023/2_conundrum/part1/: conundrum.cpp
2023/2_conundrum/part2/: conundrum.cpp
2023/3_gear/part1/: gear.cpp
2023/3_gear/part2/: gear.cpp
2023/4_scratchcards/part1/: scratchcards.cpp
2023/4_scratchcards/part2/: scratchcards.cpp
2023/5_fertilizer/part1/: fertilizer.cpp
2023/5_fertilizer/part2/: fertilizer.cpp
2023/6_wait/part1/: wait.cpp
2023/6_wait/part2/: wait.cpp
2023/7_camel/part1/: camel.cpp
2023/7_camel/part2/: camel.cpp
2023/8_wasteland/: wasteland_p1.cpp  wasteland_p2.cpp
2023/9_mirage/: mirage_p1.cpp  mirage_p2.cpp
lib-2024/: Cargo.toml
lib-2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
lib-2025/: Cargo.toml
lib-2025/src/: day01.rs  day02.rs  day03.rs  lib.rs
lib-core/: Cargo.toml
lib-core/src/: lib.rs
src/: main.rs
